--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@
 .cxx
 local.properties
 .idea/androidTestResultsUserPreferences.xml
+.idea/misc.xml
+.idea/misc.xml
+.idea/gradle.xml
+.idea/gradle.xml
